framec_tests/language_specific/python/v3_systems/negative/frame_in_actions.frm
@target python

system S {
    actions:
        bad() {
            => $^
        }
    machine:
        $A {
            e() { x() }
        }
}

